Fixes build error
```email
The page build failed for the `master` branch with the following error:

Your SCSS file `assets/stylesheets/main.scss` has an error on line 4: File to import not found or unreadable: basically-basic/themes/default. For more information, see https://help.github.com/articles/page-build-failed-invalid-sass-or-scss/.

For information on troubleshooting Jekyll see:

  https://help.github.com/articles/troubleshooting-jekyll-builds

If you have any questions you can contact us by replying to this email.
```

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -4,9 +4,4 @@
 
 @charset "utf-8";
 
-// Theme skin
-@import "basically-basic/themes/{{ site.data.theme.skin | default: 'default' }}";
-
-@import "basically-basic";
-
 $accent-color: red;
